fixing logo blurriness and creating /Pythonquestions

--- a/src/Pythonquestions/pythonquestions.css
+++ b/src/Pythonquestions/pythonquestions.css
@@ -6,8 +6,6 @@ body {
     position: absolute;
     top: 41px;
     left: 47px;
-    height: 89px;
-
 }
 
 #title {
